# demo-sharepoint-api

./: .env  .env.example  README.md  pyproject.toml  requirements.txt
app/: api.py
app/models/: model_sharepoint.py
app/routers/: sharepoint.py
app/services/: service_sharepoint.py
